Fixed responsive issues on small screen

--- a/public/style.css
+++ b/public/style.css
@@ -91,8 +91,7 @@ body {
   background: rgba(255, 255, 255, 0.8);
   border-radius: 15px;
   z-index: 1;
-  -webkit-backdrop-filter: blur(6px);
-          backdrop-filter: blur(6px);
+  backdrop-filter: blur(6px);
 }
 
 #main {
@@ -273,7 +272,6 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: -moz-fit-content;
   width: fit-content;
   position: relative;
   border-radius: 25px;
@@ -295,7 +293,8 @@ h1::before {
   bottom: -15px;
   border-radius: 30px;
   border: 15px solid transparent;
-  background: linear-gradient(45deg, green, yellow, blue, white); /* Brazilian flag colors */
+  background: linear-gradient(45deg, green, yellow, blue, white);
+  /* Brazilian flag colors */
   background-size: 400% 400%;
   z-index: -1;
   animation: rainbow-border 2s linear infinite;
@@ -381,9 +380,11 @@ nav li a:before {
   transition: transform 0.3s ease;
 }
 nav li a:hover {
-  background: linear-gradient(45deg, green, yellow, blue, white); /* Brazilian flag colors */
+  background: linear-gradient(45deg, green, yellow, blue, white);
+  /* Brazilian flag colors */
   background-size: 400% 400%;
-  animation: rainbow-background 2s linear infinite; /* Continuous rainbow background */
+  animation: rainbow-background 2s linear infinite;
+  /* Continuous rainbow background */
   color: #d4e8fc;
 }
 nav li a:hover:before {
@@ -656,7 +657,8 @@ a:hover {
 svg {
   width: 50px;
   height: 50px;
-  display: none; /* Hides the star */
+  display: none;
+  /* Hides the star */
   margin: auto;
 }
 
@@ -666,4 +668,4 @@ svg path {
   stroke-width: 2px;
   transform: scale(0.4);
   transform-origin: center;
-}/*# sourceMappingURL=style.css.map */
+}
